--- a/2016-06-20-nodepdx.md
+++ b/2016-06-20-nodepdx.md
@@ -8,10 +8,6 @@ Also the sponsors are super interesting. I met (another) Michelle from Elastic w
 
 Chatting with [Jacob](https://github.com/vigevenoj) about another sponsor, [Losant](https://www.losant.com/), he told me about [NodeRed](http://nodered.org/) and [freeboard](http://freeboard.io/)
 
-Currently listening to [Liz Abinante](https://twitter.com/feministy) jam about knitting and code.
+Currently listening to [Liz Abinante](https://twitter.com/feministy) jam about [knitting and code](https://speakerdeck.com/feministy/a-foolish-quest-auto-generating-knitting-patterns-with-javascript).
 
 ![liz.jpg]({{site.baseurl}}/liz.jpg)
-
-
-
-
